--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "darkaonline/l5-swagger": "*",
         "laravel/framework": "^12.0",
+        "laravel/socialite": "*",
         "laravel/tinker": "^2.10.1",
         "tymon/jwt-auth": "^2.2"
     },
